fix: java class access restrictions on jdk-17+